syntax = "proto3";

import "operation.proto";

message OrderProduct {
  optional int32 product_id = 1;
  optional int32 quantity = 2;
}


message Order {
  optional string order_id = 1;  
  optional repeated OrderProduct products = 2;
  optional OperationType operation = 3;
}